--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,13 @@
 body {
     background-color: #a9ccfa;
+    color: #F9FAFC;
 }
 
 .bg{
     background-image: url(../background.jpg);
-    position: relative;
-    height: 100%;
-    width: 100%;
+    background-size: 100% 100%;  
+    width: 100%; 
+    height: 600px;
 }
 
 .brand {
@@ -95,15 +96,20 @@ body {
 
 .post-link {
     text-decoration: none;
-    color: #445261;
+    color: #ffffff;
 }
 
 .post-link:hover,
 .page-link {
-    color: #E84610;
+    color: #0dcaf0;
 }
 
 .post-title {
+    margin-top: 20%;
+    margin-left: 5%;
+}
+
+.post-date {
     margin-top: 20%;
     margin-left: 5%;
 }
@@ -147,3 +153,11 @@ body {
     background: transparent;
     border: none;
 }
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+  }
