--- a/templates/base.html
+++ b/templates/base.html
@@ -20,16 +20,16 @@
 
 </head>
 
-<body class="d-flex flex-column h-100 main-bg">
+<body class="d-flex flex-column h-100 main-bg bg img-fluid">
 
     <!-- Navigation -->
 
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg bg-light navbar-fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}"><span class="brand"><strong>E</strong><span class="blue-brand">xpense</span><strong>AID</strong></span></span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon navbar-light"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -56,7 +56,7 @@
         </div>
     </nav>
 
-    <main class="bg">
+    <main>
         {% block content %}
         <!-- Content Goes here -->
         {% endblock content %}
@@ -64,11 +64,11 @@
 
     <!-- Footer -->
     <footer class="footer mt-auto py-3 bg-light text-dark">
-        <p class="m-0 text-center text-blue">ExpenseAid</p>
-        <p class="m-0 text-center text-blue">Follow us: <i class="fab fa-facebook-square ms-3"></i>
+        <a class="navbar-brand" href="{% url 'home' %}"><span class="brand"><strong>E</strong><span class="blue-brand">xpense</span><strong>AID</strong></span></span></a>
+        <span class="m-10 float-end text-right text-blue">Follow us: <i class="fab fa-facebook-square ms-3"></i>
             <i class="fab fa-twitter-square ms-3"></i>
             <i class="fab fa-instagram-square ms-3"></i>
-            <i class="fab fa-youtube-square ms-3"></i></p>
+            <i class="fab fa-youtube-square ms-3"></i></span>
     </footer>
 </body>
 
