--- a/templates/index.html
+++ b/templates/index.html
@@ -4,61 +4,72 @@
 
 <a href="{% url 'add_post' %}" class="card-title post-link btn-form btn-lg">Add an Expense</a>
 
-<div class="container-fluid">
-    <div class="row">
 
-        <!-- Blog Entries Column -->
-        <div class="col-12 mt-3 left">
-            <div class="row">
-                {% for post in post_list %}
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <div class="image-container">
-                                {% if "placeholder" in post.featured_image.url %}
-                                <img class="card-img-top"
-                                    src="https://w0.peakpx.com/wallpaper/145/77/HD-wallpaper-euro-blue-sign-blue-brickwall-euro-sign-currency-signs-euro-neon-sign-euro.jpg">
-                                {% else %}
-                                <img class="card-img-top" src=" {{ post.featured_image.url }}">
-                                {% endif %}
-                                <div class="image-flash">
-                                    <p class="author">Author: {{ post.author }}</p>
+{% if user.is_authenticated %}
+    <div class="container-fluid">
+        <div class="row">
+            <!--  Entries Column -->
+            <div class="col-12 mt-3 left">
+                <div class="row">
+                    {% for post in post_list %}
+                        {% if post.author == user %}
+                            <div class="col-md-4">
+                                <div class="card mb-4">
+                                    <div class="card-body">
+                                        <div class="image-container">
+                                            {% if "placeholder" in post.featured_image.url %}
+                                            <img class="card-img-top"
+                                                src="https://w0.peakpx.com/wallpaper/145/77/HD-wallpaper-euro-blue-sign-blue-brickwall-euro-sign-currency-signs-euro-neon-sign-euro.jpg">
+                                            {% else %}
+                                            {% endif %}
+                                            <div class="image-flash">
+                                                <p class="author">Author: {{ post.author }}</p>
+                                            </div>
+                                        </div>
+                                        <a href="{% url 'post_detail' post.slug %}" class="post-link">
+                                            <h2 class="card-title">{{ post.title }}</h2>
+                                            <span>
+                                                <h6 class="card-date">{{ post.date }}</h6>
+                                            </span><span>
+                                                <h6> Amount: €{{ post.expense_amount }}</h6>
+                                            </span>
+                                        </a>
+                                        <hr />
+
+                                    </div>
                                 </div>
                             </div>
-                            <a href="{% url 'post_detail' post.slug %}" class="post-link">
-                                <h2 class="card-title">{{ post.title }}</h2>
-                                <span><h6 class="card-date">{{ post.date }}</h6></span><span><h6> Amount: €{{ post.expense_amount }}</h6></span>
-                                <p class="card-text">{{ post.excerpt }}</p>
-                            </a>
-                            <hr />
-                            
+                            {% if forloop.counter|divisibleby:3 %}
                         </div>
-                    </div>
-                </div>
-                {% if forloop.counter|divisibleby:3 %}
-            </div>
-            <div class="row">
-                {% endif %}
-                {% empty %}
-                <tr><td>You have no Expenses logged yet!</td></tr>
-                {% endfor %}
+                        <div class="row">
+                            {% endif %}
+                            {% endif %}
+                    {% empty %}
+                            <tr>
+                                <td>You have no Expenses logged yet!</td>
+                            </tr>
+                    {% endfor %}
 
+                </div>
             </div>
         </div>
-    </div>
-    {% if is_paginated %}
-    <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
-            {% if page_obj.has_previous %}
-            <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
-            {% endif %}
-            {% if page_obj.has_next %}
-            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+            {% if is_paginated %}
+            <nav aria-label="Page navigation">
+                <ul class="pagination justify-content-center">
+                    {% if page_obj.has_previous %}
+                    <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
+                    {% endif %}
+                    {% if page_obj.has_next %}
+                    <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
 
+                    {% endif %}
+                </ul>
+            </nav>
             {% endif %}
-        </ul>
-    </nav>
+    {% else %}
+    <div class="alert alert-info">Please <a href="{% url 'account_login' %}">Login</a> to see your Expenses logged</div>
+
     {% endif %}
-</div>
-
+    </div>
+    
 {%endblock%}
