Added Delete functionality and confirmation

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -15,7 +15,7 @@
             <div class="d-none d-md-block col-md-6 masthead-image">
                 <!-- The featured image URL goes in the src attribute -->
                 {% if "placeholder" in post.featured_image.url %}
-                <img src="https://w0.peakpx.com/wallpaper/145/77/HD-wallpaper-euro-blue-sign-blue-brickwall-euro-sign-currency-signs-euro-neon-sign-euro.jpg" width="100%">
+                <img src="https://images.freeimages.com/365/images/istock/previews/9998/99988263-money-symbol-euro-sign-button.jpg" width="100%">
                 {% else %}
                 <img src=" {{ post.featured_image.url }}" width="100%">
                 {% endif %}
