--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .bg{
-    background-image: url(../background.jpg);
+    background-image: url(../city_background.jpg);
     background-size: 100% 100%;  
     width: 100%; 
     height: 600px;
@@ -30,7 +30,7 @@ body {
 }
 
 .dark-bg {
-    background-color: #445261;
+    background-color: #395675;
 }
 
 .main-bg {
@@ -44,6 +44,7 @@ body {
 
 .image-container {
     position: relative;
+    border-radius: 50%;
 }
 
 .image-flash {
@@ -75,7 +76,7 @@ h1 {
 }
 
 .masthead-text {
-    background-color: #445261;
+    background-color: #395675;
     color: white;
     position: relative;
 }
@@ -92,7 +93,7 @@ h1 {
     right: 90%;
     height: 100%;
     width: 150%;
-    background: #445261;
+    background: #395675;
     -webkit-transform: skew(15deg);
     -moz-transform: skew(15deg);
     transform: skew(15deg);
@@ -168,9 +169,9 @@ h1 {
 }
 
 .footer {
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
-    height: 60px;
-    line-height: 60px;
+    height: 40px;
+    line-height: 15px;
   }
