--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
                                         <div class="image-container">
                                             {% if "placeholder" in post.featured_image.url %}
                                             <img class="card-img-top"
-                                                src="https://w0.peakpx.com/wallpaper/145/77/HD-wallpaper-euro-blue-sign-blue-brickwall-euro-sign-currency-signs-euro-neon-sign-euro.jpg">
+                                                src="https://images.freeimages.com/365/images/istock/previews/9998/99988263-money-symbol-euro-sign-button.jpg">
                                             {% else %}
                                             {% endif %}
                                             <div class="image-flash">
@@ -57,10 +57,10 @@
             <nav aria-label="Page navigation">
                 <ul class="pagination justify-content-center">
                     {% if page_obj.has_previous %}
-                    <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
+                    <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link btn-form btn-lg">&laquo; PREV </a></li>
                     {% endif %}
                     {% if page_obj.has_next %}
-                    <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+                    <li><a href="?page={{ page_obj.next_page_number }}" class="page-link btn-form btn-lg"> NEXT &raquo;</a></li>
 
                     {% endif %}
                 </ul>
