Add success message alert

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -9,7 +9,7 @@
                 <!-- Post title goes in these h1 tags -->
                 <h1 class="post-title">{{ post.title }}</h1>
                 <span class="post-date">{{ post.date }}</span>
-                <!-- Post author goes before the | the post's created date goes after -->
+                <!-- Post author goes before the | the post's amount goes after -->
                 <p class="post-subtitle">{{ post.author }} |  €{{ post.expense_amount }}</p>
             </div>
             <div class="d-none d-md-block col-md-6 masthead-image">
