--- a/templates/update_post.html
+++ b/templates/update_post.html
@@ -13,7 +13,7 @@
             <form enctype="multipart/form-data" method="POST">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button type="submit" Class="btn-signup:hover btn-signup:active btn-form">Add Expense
+                <button type="submit" Class="btn-signup:hover btn-signup:active btn-form">Update Expense
                     Post</button>
             </form>
 
