--- a/templates/base.html
+++ b/templates/base.html
@@ -58,6 +58,16 @@
     </nav>
 
     <main>
+        
+        {% if messages %}
+
+            <div class="text-center alert alert-info">
+            {% for message in messages %}
+                    {{ message|safe }}
+            </div>
+            {% endfor %}
+        {% endif %}
+
         {% block content %}
         <!-- Content Goes here -->
         {% endblock content %}
