Corrected contrast and added autoslug to create unique slugs automatically

--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="container-fluid">
-    <h1>Add a new post</h1>
+    <h1 class="dark-bg">Add a New Post</h1>
     <div class="row align-items-center" style="height: 10vh;">
         <div class="mx-auto col-10 col-md-8 col-lg-6 form-control">
 
