--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<h2 class="text-center dark-bg">Your Logged Expenses</h2>
 <a href="{% url 'add_post' %}" class="card-title post-link btn-form btn-lg">Add an Expense</a>
 
 {% if user.is_authenticated %}
@@ -16,24 +16,20 @@
                                 <div class="card mb-4">
                                     <div class="card-body">
                                         <div class="image-container">
-                                            {% if "placeholder" in post.featured_image.url %}
                                             <img class="card-img-top"
-                                                src="https://images.freeimages.com/365/images/istock/previews/9998/99988263-money-symbol-euro-sign-button.jpg">
-                                            {% else %}
-                                            {% endif %}
+                                                src="https://images.freeimages.com/365/images/istock/previews/9998/99988263-money-symbol-euro-sign-button.jpg" alt="A Euro Symbol">
                                             <div class="image-flash">
                                                 <p class="author">Author: {{ post.author }}</p>
                                             </div>
                                         </div>
                                         <a href="{% url 'post_detail' post.slug %}" class="post-link">
-                                            <h2 class="card-title">{{ post.title }}</h2>
+                                            <h4 class="card-title">{{ post.title }}</h4>
                                             <span>
                                                 <h6 class="card-date">{{ post.date }}</h6>
-                                            </span><span>
                                                 <h6> Amount: €{{ post.expense_amount }}</h6>
                                             </span>
                                         </a>
-                                        <hr />
+                                        <hr>
 
                                     </div>
                                 </div>
