--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .bg{
-    background-image: url(../city_background.jpg);
+    background-image: url(../css/city_background.jpg);
     background-size: 100% 100%;  
     width: 100%; 
     height: 600px;
@@ -44,7 +44,6 @@ body {
 
 .image-container {
     position: relative;
-    border-radius: 50%;
 }
 
 .image-flash {
@@ -111,7 +110,13 @@ h1 {
 
 .post-link:hover,
 .page-link {
-    color: #3b71ca;
+    color: #9bdbf8;
+}
+
+.post-detail-img {
+    width: 100%;
+    max-width: 400px;
+    height: auto;
 }
 
 .post-title {
@@ -134,11 +139,12 @@ h1 {
     background-color: #fff;
     color: #3b71ca;
     font-weight: 700;
+    margin-bottom: 20px;
 }
 
 .btn-form:hover,
 .btn-form:active {
-    background-color: #fff;
+    background-color: #9bdbf8;
     color: #3b71ca;
 }
 
@@ -149,7 +155,7 @@ h1 {
 
 .link:hover,
 .link:active {
-    color: #445261;
+    color: #3b71ca;
     text-decoration: underline;
 }
 
