--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -14,11 +14,7 @@
             </div>
             <div class="d-none d-md-block col-md-6 masthead-image">
                 <!-- The featured image URL goes in the src attribute -->
-                {% if "placeholder" in post.featured_image.url %}
-                <img src="https://images.freeimages.com/365/images/istock/previews/9998/99988263-money-symbol-euro-sign-button.jpg" width="100%">
-                {% else %}
-                <img src=" {{ post.featured_image.url }}" width="100%">
-                {% endif %}
+                <img src= "https://images.freeimages.com/365/images/istock/previews/9998/99988263-money-symbol-euro-sign-button.jpg" alt="A Euro Symbol" class="post-detail-img">
             </div>
         </div>
     </div>
@@ -46,6 +42,7 @@
     <div>
     <a href="{% url 'update_post' post.slug %}" class="card-title post-link btn-form btn-lg">Edit this Expense</a>
     </div>
+    <br>
     <div>
     <a href="{% url 'delete_post' post.slug %}" class="card-title post-link btn-form btn-lg">Delete this Expense</a>
     </div>
