--- a/templates/update_post.html
+++ b/templates/update_post.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% load crispy_forms_tags %} 
+{% load crispy_forms_tags %}
 
 {% block content %}
 
@@ -13,7 +13,7 @@
             <form enctype="multipart/form-data" method="POST">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button type="submit" Class="btn-signup:hover btn-signup:active btn-form">Update Expense
+                <button type="submit" Class="btn-form:hover btn-form:active btn-form">Update Expense
                     Post</button>
             </form>
 
