Added Images and filled out ReadMe

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -115,8 +115,9 @@ h1 {
 
 .post-detail-img {
     width: 100%;
-    max-width: 400px;
+    max-width: 300px;
     height: auto;
+    max-height: fit-content;
 }
 
 .post-title {
