--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,13 +7,13 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container dark-bg">
   <div class="row">
     <div class="col-md-8 mt-3-offset-md-2">
       <h3>{% trans "Sign In" %}</h3>
 
       <p>{% blocktrans %}If you have not created an account yet, then please
-        <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+        <a class="post-link" href="{{ signup_url }}"><strong>Sign up</strong></a> first.{% endblocktrans %}</p>
     </div>
   </div>
   <div class="row">
