Add get function to fix pagination bug

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<div class="container dark-bg">
+<div class="container justify-content-center dark-bg">
   <div class="row">
     <div class="col-md-8 mt-3-offset-md-2">
       <h3>{% trans "Sign In" %}</h3>
