--- a/templates/index.html
+++ b/templates/index.html
@@ -11,44 +11,39 @@
             <div class="col-12 mt-3 left">
                 <div class="row">
                     {% for post in post_list %}
-                    <!-- <h1>{{post.author}}</h1>
-                    <h1>{{user}}</h1> -->
-                        {% if post.author == user %}
-
-                        
-                            <div class="col-md-4">
-                                <div class="card mb-4">
-                                    <div class="card-body">
-                                        <div class="image-container">
-                                            <img class="card-img-top"
-                                                src="https://images.freeimages.com/365/images/istock/previews/9998/99988263-money-symbol-euro-sign-button.jpg" alt="A Euro Symbol">
-                                            <div class="image-flash">
-                                                <p class="author">Author: {{ post.author }}</p>
-                                            </div>
+                        <div class="col-md-4">
+                            <div class="card mb-4">
+                                <div class="card-body">
+                                    <div class="image-container">
+                                        <img class="card-img-top"
+                                            src="https://images.freeimages.com/365/images/istock/previews/9998/99988263-money-symbol-euro-sign-button.jpg" alt="A Euro Symbol">
+                                        <div class="image-flash">
+                                            <p class="author">Author: {{ post.author }}</p>
                                         </div>
-                                        <a href="{% url 'post_detail' post.slug %}" class="post-link">
-                                            <h4 class="card-title">{{ post.title }}</h4>
-                                            <div>
-                                                <p class="card-date"><strong>{{ post.date }}</strong></p>
-                                                <p><strong> Amount: €{{ post.expense_amount }}</strong></p>
-                                            </div>
-                                        </a>
-                                        <hr>
-
                                     </div>
+                                    <a href="{% url 'post_detail' post.slug %}" class="post-link">
+                                        <h4 class="card-title">{{ post.title }}</h4>
+                                        <div>
+                                            <p class="card-date"><strong>{{ post.date }}</strong></p>
+                                            <p><strong> Amount: €{{ post.expense_amount }}</strong></p>
+                                        </div>
+                                    </a>
+                                    <hr>
+
                                 </div>
                             </div>
-                            {% if forloop.counter|divisibleby:3 %}
-                            </div>
-                            <div class="row">
-                            {% endif %}
+                        </div>
+                        {% comment %}
+                        {% if forloop.counter|divisibleby:3 %}
+                        </div>
+                        <div class="row">
                         {% endif %}
+                        {% endcomment %}
                     {% empty %}
                             <tr>
                                 <td>You have no Expenses logged yet!</td>
                             </tr>
                     {% endfor %}
-
                 </div>
             </div>
         </div>
@@ -66,7 +61,7 @@
             </nav>
             {% endif %}
     {% else %}
-    <div class="alert alert-info">Please <a href="{% url 'account_login' %}">Login</a> to see your Expenses logged</div>
+    <div class="alert alert-info">Please <span><a href="{% url 'account_login' %}" class="card-title post-link btn-form btn-sm">Login</a></span> to see your Expenses logged</div>
 
     {% endif %}
     </div>
