--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .bg{
-    background-image: url(../css/city_background.jpg);
+    background-image: url(https://res.cloudinary.com/di3jaftjk/image/upload/v1679347542/static/css/city_background.93e13370d134.jpg);
     background-size: 100% 100%;  
     width: 100%; 
     height: 600px;
